--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "algoliasearch": "^4.13.1",
+    "axios": "^0.27.2",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "storyblok-js-client": "^4.5.5"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
